...
        return null;
    }
  };

  return (
    <View
      testID="business-screen"
      style={{
        backgroundColor: colors.background,
        width: "100%",
        height: "100%",
        flex: 1,
      }}
...
