...
    });
  };

  const customStyles = useCustomStyles();

  return (
    <View testID="calendar-month-screen" style={customStyles.container}>
      {/* Logo */}
      <View style={{ alignItems: "center", paddingTop: insets.top }}>
        <HeaderLogo preset="sm" variant="rectangle" marginVertical={2} />
      </View>
      {/* Header unifié avec style Business - Position fixe en haut */}
      <CalendarHeader
...
