...
        return null;
    }
  };

  return (
    <SafeAreaView
      testID="business-registration-screen"
      style={styles.container}
    >
      <KeyboardAvoidingView
        style={{ flex: 1 }}
        behavior={Platform.OS === "ios" ? "padding" : "height"}
      >
...
